# leobrooklyn

./: ,gitpod.yml  .gitignore  .gitpod.yml  README.md  TODO.md  background.py  buildozer.spec  config.py  controle.py  convert_sound.py  enemy.py  game.py  gen_web.sh  grupos.py  leo_brooklyn.py  leo_brooklyn.spec  main.py  objetcs.py  persons.py  placar.py  player.py  pyproject.toml  requirements.txt  setup_requirements.sh  som.py  sprite_class.py  sprite_groups.py  spritesheet.py  ui_elements.py  utils.py
.github/workflows/: main.yml
docs/: index.html  leobrooklyn.apk
