[tool.poetry]
name = "leobrooklyn"
version = "0.1.0"
description = ""
authors = ["Daniel Fonseca Alves <dalraf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.3.0"
pyinstaller = "^5.10.1"
pygbag = "^0.7.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
